--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         .comments {
             list-style: none;
             padding: 0;
+            color: white;
         }
         .comment {
             padding: 10px;
