--- a/index.html
+++ b/index.html
@@ -1,154 +1,77 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Commentaires</title>
+    <title>Comment Box</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-        }
-        .comment-section {
-            max-width: 600px;
-            margin: 0 auto;
-            padding: 20px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-        .comment-form {
-            display: flex;
-            flex-direction: column;
-            margin-bottom: 20px;
-        }
-        .comment-form input, .comment-form textarea {
-            margin-bottom: 10px;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 3px;
-        }
-        .comment-form button {
-            padding: 10px;
-            border: none;
-            background-color: #007BFF;
-            color: white;
-            border-radius: 3px;
-            cursor: pointer;
-        }
-        .comment-form button:hover {
-            background-color: #0056b3;
-        }
-        .comments {
-            list-style: none;
-            padding: 0;
-        }
-        .comment {
-            padding: 10px;
-            border-bottom: 1px solid #ccc;
-        }
-        .comment .comment-author {
-            font-weight: bold;
-        }
+        body { font-family: Arial, sans-serif; margin: 20px; }
+        .comment-box { margin-bottom: 20px; }
+        .comment-box textarea { width: 100%; height: 100px; margin-bottom: 10px; }
+        .comment { border: 1px solid #ccc; padding: 10px; margin-bottom: 10px; }
     </style>
 </head>
 <body>
-    <div class="comment-section">
-        <div class="comment-form">
-            <input type="text" id="comment-author" placeholder="Votre nom">
-            <textarea id="comment-text" rows="4" placeholder="Votre commentaire"></textarea>
-            <button onclick="postComment()">Poster le commentaire</button>
-        </div>
-        <ul class="comments" id="comments">
-            <!-- Les commentaires apparaîtront ici -->
-        </ul>
+    <h1>Comments</h1>
+    <div class="comment-box">
+        <textarea id="commentText" placeholder="Add a comment..."></textarea>
+        <button onclick="submitComment()">Submit</button>
     </div>
+    <div id="comments"></div>
 
-    <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
-    <!-- Add Firebase products that you want to use -->
-    <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
-
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
     <script>
-        // Configuration Firebase (inchangée)
         const firebaseConfig = {
-            apiKey: "AIzaSyAFsnabnd0A0LeEwO3w9gK-6fhc_rWSnNU",
-            authDomain: "jrpglibrary-38e6c.firebaseapp.com",
-            projectId: "jrpglibrary-38e6c",
-            storageBucket: "jrpglibrary-38e6c.appspot.com",
-            messagingSenderId: "82820484706",
-            appId: "1:82820484706:web:923bfc37a4a3caa0198b3b",
-            measurementId: "G-T0Q8LRVJN2"
+          apiKey: "AIzaSyAFsnabnd0A0LeEwO3w9gK-6fhc_rWSnNU",
+          authDomain: "jrpglibrary-38e6c.firebaseapp.com",
+          projectId: "jrpglibrary-38e6c",
+          storageBucket: "jrpglibrary-38e6c.appspot.com",
+          messagingSenderId: "82820484706",
+          appId: "1:82820484706:web:b1130a49ee3f47c0198b3b",
+          measurementId: "G-98KKZX26D8"
         };
+        
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const analytics = getAnalytics(app);
 
-        // Initialiser Firebase
-        firebase.initializeApp(firebaseConfig);
-        const db = firebase.firestore();
-        const auth = firebase.auth();
-
-        // Authentification anonyme
-        auth.signInAnonymously().catch(error => {
-            console.error("Erreur d'authentification anonyme:", error);
-        });
-
-        // Fonction pour obtenir l'identifiant de la page
-        function getPageId() {
-            // Vous devrez implémenter cette fonction pour récupérer l'identifiant unique de la page
-            // Par exemple, vous pourriez utiliser un attribut data sur le corps de la page
-            return document.body.getAttribute('data-page-id') || 'default';
-        }
-
-        // Fonction pour poster un commentaire
-        function postComment() {
-            const author = document.getElementById('comment-author').value;
-            const text = document.getElementById('comment-text').value;
-            const pageId = getPageId();
-
-            if (author && text) {
-                db.collection("pages").doc(pageId).collection("comments").add({
-                    author: author,
-                    text: text,
+        async function submitComment() {
+            const commentText = document.getElementById('commentText').value;
+            const pageId = window.location.pathname; // Unique identifier for each Notion page
+            if (commentText.trim()) {
+                await db.collection('comments').add({
+                    text: commentText,
+                    pageId: pageId,
                     timestamp: firebase.firestore.FieldValue.serverTimestamp()
-                })
-                .then(() => {
-                    document.getElementById('comment-author').value = '';
-                    document.getElementById('comment-text').value = '';
-                })
-                .catch(error => {
-                    console.error("Erreur lors de l'ajout du commentaire:", error);
                 });
-            } else {
-                alert('Veuillez remplir tous les champs.');
+                document.getElementById('commentText').value = '';
+                loadComments();
             }
         }
 
-        // Fonction pour afficher les commentaires
-        function loadComments() {
-            const pageId = getPageId();
-            db.collection("pages").doc(pageId).collection("comments").orderBy("timestamp", "desc")
-                .onSnapshot(snapshot => {
-                    const commentsList = document.getElementById('comments');
-                    commentsList.innerHTML = '';
-                    snapshot.forEach(doc => {
-                        const comment = doc.data();
-                        const commentItem = document.createElement('li');
-                        commentItem.classList.add('comment');
-
-                        const commentAuthor = document.createElement('div');
-                        commentAuthor.classList.add('comment-author');
-                        commentAuthor.textContent = comment.author;
-
-                        const commentText = document.createElement('div');
-                        commentText.textContent = comment.text;
-
-                        commentItem.appendChild(commentAuthor);
-                        commentItem.appendChild(commentText);
-                        commentsList.appendChild(commentItem);
-                    });
-                });
+        async function loadComments() {
+            const pageId = window.location.pathname;
+            const commentsDiv = document.getElementById('comments');
+            commentsDiv.innerHTML = '';
+            const querySnapshot = await db.collection('comments')
+                .where('pageId', '==', pageId)
+                .orderBy('timestamp', 'desc')
+                .get();
+            querySnapshot.forEach((doc) => {
+                const commentData = doc.data();
+                const commentDiv = document.createElement('div');
+                commentDiv.classList.add('comment');
+                commentDiv.innerText = commentData.text;
+                commentsDiv.appendChild(commentDiv);
+            });
         }
 
-        // Charger les commentaires au démarrage
         loadComments();
     </script>
 </body>
 </html>
+
+
+
+
