--- a/index.html
+++ b/index.html
@@ -3,21 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Boîte de commentaires</title>
+    <title>Widget de commentaires pour Notion</title>
     <style>
-        body { font-family: Arial, sans-serif; margin: 20px; }
-        .comment-box { margin-bottom: 20px; }
-        .comment-box textarea { width: 100%; height: 100px; margin-bottom: 10px; }
-        .comment { border: 1px solid #ccc; padding: 10px; margin-bottom: 10px; }
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+            margin: 0;
+            padding: 10px;
+            background-color: transparent;
+        }
+        .comment-system {
+            max-width: 100%;
+        }
+        .comment-input {
+            width: 100%;
+            height: 80px;
+            margin-bottom: 10px;
+            padding: 8px;
+            border: 1px solid #e0e0e0;
+            border-radius: 4px;
+            font-size: 14px;
+            resize: vertical;
+        }
+        .comment-submit {
+            padding: 8px 16px;
+            background-color: #2eaadc;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 14px;
+        }
+        .comment {
+            border: 1px solid #e0e0e0;
+            border-radius: 4px;
+            padding: 10px;
+            margin-top: 10px;
+            font-size: 14px;
+            background-color: #f9f9f9;
+        }
     </style>
 </head>
 <body>
-    <h1>Commentaires</h1>
-    <div class="comment-box">
-        <textarea id="commentText" placeholder="Ajoutez un commentaire..."></textarea>
-        <button onclick="submitComment()">Soumettre</button>
+    <div id="comment-system" class="comment-system">
+        <!-- Le système de commentaires sera injecté ici -->
     </div>
-    <div id="comments"></div>
 
     <script type="module">
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.22.1/firebase-app.js';
@@ -36,53 +65,69 @@
         const app = initializeApp(firebaseConfig);
         const db = getFirestore(app);
 
-        window.submitComment = async function() {
-            const commentText = document.getElementById('commentText').value;
-            const pageId = window.location.pathname;
-
-            if (commentText.trim()) {
-                try {
-                    await addDoc(collection(db, 'comments'), {
-                        text: commentText,
-                        pageId: pageId,
-                        timestamp: serverTimestamp()
-                    });
-                    console.log('Commentaire ajouté avec succès');
-                    document.getElementById('commentText').value = '';
-                    loadComments();
-                } catch (error) {
-                    console.error('Erreur lors de l\'ajout du commentaire: ', error);
+        class CommentSystem {
+            constructor(containerId) {
+                this.container = document.getElementById(containerId);
+                this.pageId = new URLSearchParams(window.location.search).get('pageId');
+                if (!this.pageId) {
+                    this.container.innerHTML = 'Erreur: pageId manquant';
+                    return;
                 }
-            } else {
-                console.warn('Le texte du commentaire est vide');
+                this.render();
+                this.loadComments();
+            }
+
+            render() {
+                this.container.innerHTML = `
+                    <textarea class="comment-input" placeholder="Écrivez votre commentaire ici..."></textarea>
+                    <button class="comment-submit">Envoyer</button>
+                    <div class="comments-container"></div>
+                `;
+                this.container.querySelector('.comment-submit').addEventListener('click', () => this.submitComment());
+            }
+
+            async submitComment() {
+                const commentText = this.container.querySelector('.comment-input').value.trim();
+                if (commentText) {
+                    try {
+                        await addDoc(collection(db, 'comments'), {
+                            text: commentText,
+                            pageId: this.pageId,
+                            timestamp: serverTimestamp()
+                        });
+                        this.container.querySelector('.comment-input').value = '';
+                        this.loadComments();
+                    } catch (error) {
+                        console.error('Erreur lors de l\'ajout du commentaire:', error);
+                    }
+                }
+            }
+
+            async loadComments() {
+                const commentsContainer = this.container.querySelector('.comments-container');
+                commentsContainer.innerHTML = '';
+                try {
+                    const q = query(
+                        collection(db, 'comments'),
+                        where('pageId', '==', this.pageId),
+                        orderBy('timestamp', 'desc')
+                    );
+                    const querySnapshot = await getDocs(q);
+                    querySnapshot.forEach((doc) => {
+                        const commentData = doc.data();
+                        const commentElement = document.createElement('div');
+                        commentElement.classList.add('comment');
+                        commentElement.textContent = commentData.text;
+                        commentsContainer.appendChild(commentElement);
+                    });
+                } catch (error) {
+                    console.error('Erreur lors du chargement des commentaires:', error);
+                }
             }
         }
 
-        async function loadComments() {
-            const pageId = window.location.pathname;
-            const commentsDiv = document.getElementById('comments');
-            commentsDiv.innerHTML = '';
-
-            try {
-                const q = query(collection(db, 'comments'), 
-                    where('pageId', '==', pageId),
-                    orderBy('timestamp', 'desc')
-                );
-                const querySnapshot = await getDocs(q);
-                querySnapshot.forEach((doc) => {
-                    const commentData = doc.data();
-                    const commentDiv = document.createElement('div');
-                    commentDiv.classList.add('comment');
-                    commentDiv.innerText = commentData.text;
-                    commentsDiv.appendChild(commentDiv);
-                });
-                console.log('Commentaires chargés avec succès');
-            } catch (error) {
-                console.error('Erreur lors du chargement des commentaires: ', error);
-            }
-        }
-
-        loadComments();
+        // Initialisation du système de commentaires
+        new CommentSystem('comment-system');
     </script>
 </body>
 </html>
