--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Citation Embed Rouge</title>
     <style>
         .citation-embed {
-            background-color: #ffebee;
             border-left: 4px solid #f44336;
             padding: 15px;
             margin: 15px 0;
@@ -27,8 +26,8 @@
 </head>
 <body>
     <div class="citation-embed">
-        <p class="citation-texte">"La vie est un défi à relever, un bonheur à mériter, une aventure à tenter."</p>
-        <p class="citation-auteur">- Mère Teresa</p>
+        <p class="citation-texte">"LChaque aventure RPG est une invitation à un voyage extraordinaire, où chaque quête, combat et découverte nous rapproche un peu plus de l'émerveillement”."</p>
+        <p class="citation-auteur">- jRPGlibrary</p>
     </div>
 </body>
 </html>
